# Alpha-Engine

./: .clangd  .gitignore  .ignore  CMakeLists.txt  configure.ps1
include/: engine.hpp  runtime.hpp
include/engine/: registry.hpp
include/platform/: rtdispatcher.hpp  window.hpp
include/utilities/: definitions.hpp
reference/engine/: CMakeLists.txt
reference/engine/include/application/: model.hpp  modelmesh.hpp  resource_manager.hpp
reference/engine/include/application/editor/: console.hpp  editor_interface.hpp  inspector.hpp  scene_graph.hpp
reference/engine/include/application/layers/: editor.hpp  game.hpp  layer_interface.hpp
reference/engine/include/engine/: textures.hpp
reference/engine/include/platform/: README.txt  components.hpp  controller.hpp  events.hpp  filesystem.hpp  input.hpp  launcher.hpp  logging.hpp  registry.hpp  utilities.hpp  window.hpp
reference/engine/include/platform/components/: camera_controller.hpp  directional_light.hpp  grid.hpp  material.hpp  mesh.hpp  metadata.hpp  point_light.hpp  transform.hpp
reference/engine/include/platform/events/: audio_events.hpp  engine_events.hpp  event_queue.hpp  platform_events.hpp  resource_events.hpp
reference/engine/include/platform/renderer/: context.hpp  framebuffer.hpp  mesh.hpp  shader.hpp  texture.hpp
reference/engine/source/engine/: textures.cpp
reference/engine/source/platform/: controller.cpp  entry.cpp  events.cpp  filesystem.cpp  input.cpp  launcher.cpp  logging.cpp  utilities.cpp  window.cpp
reference/engine/source/platform/renderer/: context.cpp  framebuffer.cpp  mesh.cpp  shader.cpp  texture.cpp
reference/resources/shaders/: display.fragment.glsl  display.vertex.glsl  grid.fragment.glsl  grid.vertex.glsl  htriangle.fragment.glsl  mesh.fragment.glsl  mesh.vertex.glsl
source/: runtime.cpp
source/platform/: entry.cpp  rtdispatcher.cpp  window.cpp
